--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,7 @@
   "dependencies": {
     "bootstrap": "^3.3.7",
     "angular": "^1.6.4",
-    "angular-nvd3": "^1.0.9"
+    "angular-nvd3": "^1.0.9",
+    "socket.io-client": "^2.0.3"
   }
 }
